@@ -1,3 +1,10 @@
+2012-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/common/tcommand.py:
+	  Don't chain up for debug/warning, should fix wrong line
+	  numbers in log output.  info() was right, and didn't get
+	  chained here.
+
 2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/command/replicate.py:
